namespace Osiris.TimeTravelPuzzler.Player
{
    internal struct AnimationParameters
    {
        public const string IsMoving = "IsMoving";
        public const string IsMovingTrigger = "IsMovingTrigger";
        public const string LongitudinalDirection = "LongitudinalDirection";
        public const string RejectMovement = "RejectMovement";
    }
}
